--- a/app/src/main/res/layout/deadfragment.xml
+++ b/app/src/main/res/layout/deadfragment.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <LinearLayout
         android:layout_marginRight="13dp"
         android:orientation="horizontal"
@@ -100,7 +99,7 @@
         android:layout_marginRight="13dp"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="14dp"
-        android:id="@+id/two_listview"
+        android:id="@+id/one_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>
