--- a/app/src/main/res/layout/keypersonnelactivity.xml
+++ b/app/src/main/res/layout/keypersonnelactivity.xml
@@ -31,7 +31,7 @@
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="重点人员"
+            android:text="应当列管未列管"
             android:textColor="#ffffffff"
             android:textSize="20sp"
             />
@@ -63,6 +63,7 @@
                 android:layout_width="10dp"
                 android:layout_height="match_parent"/>
             <RadioButton
+                android:layout_marginRight="10dp"
                 android:textSize="14sp"
                 android:textColor="@drawable/keyper_tab_txtcolor"
                 android:background="@drawable/keyper_tab_icon1"
@@ -74,23 +75,23 @@
                 android:text="重点人异地居住一年以上"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
-            <View
-                android:layout_width="10dp"
-                android:layout_height="match_parent"/>
-            <RadioButton
-                android:textSize="14sp"
+            <!--<View-->
+                <!--android:layout_width="10dp"-->
+                <!--android:layout_height="match_parent"/>-->
+            <!--<RadioButton-->
+                <!--android:textSize="14sp"-->
 
-                android:textColor="@drawable/keyper_tab_txtcolor"
-                android:background="@drawable/keyper_tab_icon1"
-                android:id="@+id/keyper_rab3"
-                android:checked="false"
-                android:gravity="center"
-                android:layout_marginRight="10dp"
-                android:layout_weight="1"
-                android:button="@null"
-                android:text="失控离开本地重点人"
-                android:layout_width="0dp"
-                android:layout_height="match_parent" />
+                <!--android:textColor="@drawable/keyper_tab_txtcolor"-->
+                <!--android:background="@drawable/keyper_tab_icon1"-->
+                <!--android:id="@+id/keyper_rab3"-->
+                <!--android:checked="false"-->
+                <!--android:gravity="center"-->
+                <!--android:layout_marginRight="10dp"-->
+                <!--android:layout_weight="1"-->
+                <!--android:button="@null"-->
+                <!--android:text="失控离开本地重点人"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent" />-->
 
 
         </RadioGroup>
