--- a/app/src/main/res/drawable/baobiao_txt_bg.xml
+++ b/app/src/main/res/drawable/baobiao_txt_bg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
         <solid android:color="#ffffff" />
-        <stroke android:width="0.5dp" android:color="#D1D1D1"/>
-    <stroke android:color="#F8F8F8"/>
+        <stroke android:width="0.5dp"
+            android:color="#D1D1D1"/>
+    <stroke android:color="#D1D1D1"/>
 </shape>
