--- a/app/src/main/res/layout/netescapefragment.xml
+++ b/app/src/main/res/layout/netescapefragment.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-
     <LinearLayout
         android:layout_marginRight="13dp"
         android:orientation="horizontal"
@@ -100,7 +97,7 @@
         android:layout_marginRight="13dp"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="14dp"
-        android:id="@+id/two_listview"
+        android:id="@+id/one_listview"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.wuxiaolong.pullloadmorerecyclerview.PullLoadMoreRecyclerView>
