--- a/app/src/main/res/layout/swweicheguanactivitydetails.xml
+++ b/app/src/main/res/layout/swweicheguanactivitydetails.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="#F8F8F8"
     android:descendantFocusability="blocksDescendants">
+
     <RelativeLayout
         android:background="#1E387F"
         android:layout_width="match_parent"
@@ -29,7 +30,7 @@
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="领导交办重点人详情"
+            android:text="死亡未撤管重点人详情"
             android:textColor="#ffffffff"
             android:textSize="20sp"
             />
@@ -324,5 +325,4 @@
 
         </ScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </LinearLayout>
