--- a/app/src/main/res/layout/zd_yinian_list_item.xml
+++ b/app/src/main/res/layout/zd_yinian_list_item.xml
@@ -74,7 +74,7 @@
 
             <!--重点录入居住地-->
             <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_marginTop="6dp"
                 android:layout_below="@+id/t2"
                 android:textSize="13sp"
@@ -85,21 +85,20 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_alignLeft="@+id/jz_residence"
                 android:layout_marginTop="6dp"
                 android:layout_below="@+id/t2"
                 android:id="@+id/zd_residence"
                 android:textSize="13sp"
                 android:textColor="#1F1F1F"
-                android:text="吉林省长春市二道区万科蓝山22栋6门608室"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <!--居住证办理居住地-->
             <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_marginTop="6dp"
-                android:layout_below="@+id/t3"
+                android:layout_below="@+id/zd_residence"
                 android:textSize="13sp"
                 android:id="@+id/t4"
                 android:layout_marginLeft="4dp"
@@ -108,15 +107,14 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_marginLeft="14dp"
                 android:layout_marginTop="6dp"
-                android:layout_below="@+id/t3"
+                android:layout_below="@+id/zd_residence"
                 android:id="@+id/jz_residence"
                 android:textSize="13sp"
                 android:textColor="#1F1F1F"
                 android:layout_toRightOf="@+id/t4"
-                android:text="吉林省长春市南关区园东小区4栋2门405室"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <!--管理派出所-->
@@ -147,7 +145,7 @@
                 android:layout_marginRight="11dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="11dp"
-                android:layout_below="@+id/t5"
+                android:layout_below="@+id/police_station"
                 android:layout_alignParentRight="true"
                 android:id="@+id/state"
                 android:layout_width="wrap_content"
