--- a/app/src/main/res/layout/zdshikongfragment.xml
+++ b/app/src/main/res/layout/zdshikongfragment.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:text="时空人员"
+        android:text="开发中..."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
 </LinearLayout>
