--- a/app/src/main/res/layout/keypersonnelactivity.xml
+++ b/app/src/main/res/layout/keypersonnelactivity.xml
@@ -36,6 +36,17 @@
             android:textSize="20sp"
             />
 
+        <TextView
+            android:id="@+id/tv_table"
+            android:layout_marginRight="20dp"
+            android:textSize="18sp"
+            android:textColor="@color/white"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:text="报表"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </RelativeLayout>
 
     <RadioGroup
