--- a/app/src/main/res/layout/waluruactivity.xml
+++ b/app/src/main/res/layout/waluruactivity.xml
@@ -26,7 +26,7 @@
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="未按照规定录入稳控考察记录"
+            android:text="稳控考察记录过于简单或雷同"
             android:textColor="#ffffffff"
             android:textSize="20sp"
             />
@@ -40,19 +40,33 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp">
-
         <RadioButton
+            android:layout_marginLeft="10dp"
             android:textColor="@drawable/keyper_tab_txtcolor"
             android:id="@+id/keyper_rab1"
             android:background="@drawable/keyper_tab_icon1"
             android:checked="true"
             android:gravity="center"
             android:textSize="14sp"
-            android:layout_marginLeft="160dp"
-            android:layout_marginRight="160dp"
             android:layout_weight="1"
             android:button="@null"
-            android:text="失控离开本地重点人"
+            android:text="稳控工作记录少于10字"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+        <View
+            android:layout_width="10dp"
+            android:layout_height="match_parent"/>
+        <RadioButton
+            android:layout_marginRight="10dp"
+            android:textColor="@drawable/keyper_tab_txtcolor"
+            android:id="@+id/keyper_rab2"
+            android:background="@drawable/keyper_tab_icon1"
+            android:checked="false"
+            android:gravity="center"
+            android:textSize="14sp"
+            android:layout_weight="1"
+            android:button="@null"
+            android:text="稳控考察记录雷同超过3次"
             android:layout_width="0dp"
             android:layout_height="match_parent" />
 
