--- a/app/src/main/res/layout/zd_yinian_list_item.xml
+++ b/app/src/main/res/layout/zd_yinian_list_item.xml
@@ -142,6 +142,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:visibility="invisible"
                 android:layout_marginRight="11dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="11dp"
